fix: key shortcut on mobile

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -276,6 +276,10 @@ hr {
   }
 }
 
+.new-task kbd {
+  display: none;
+}
+
 .new-task .btn-add {
   color: #ffffff;
   background-color: #3A3A3A;
